// $Id$

6.x-1.2 to
------------------
- Reworked i18nstrings API using proper namespaces, kept tt() for compatibility
- Added: New plugin for views translation, by nedjo, joostvdl, #360024

6.x-1.1 to 6.x-1.2
------------------ 
- Fixed: location fields not showing up for synchronization options, #426294
- Fixed: pgsql compatibility in upgrade scripts, by jandd, #383728
- Fixed: Translate all custom block titles (not only custom blocks), by brucepearson, #541048
- Added: Primary and secondary links' menus translation using preprocess, by neochief, #514108
- Changed: hook_locale(), new 'info' op, obsoleted 'refresh'
- Fixed: Some text groups losing strings when refreshed, #442428
- Fixed: Checkboxes fields are not translating in profile view pages, by neochief, #520692
- Added: Translate tags vocablary name on node form, by dboulet, #494576
- Fixed i18n Filter in Views results in SQL Error, by markus_petrux, #522162
- Added tag support for taxonomy synchronization, #605600
- Fixed buggy taxonomy synchronization, #365606, #365606, #379306
- Cleaning some module dependencies and old code.
- Fixed: Select translations autocomplete wrong filtering by hass, #557980
- Added: Translated taxonomy tokens by Hugo Wetterberg, googletorp, #344794
- Fixed: Global variable corruption by etzel, #580280
- New i18ncck module by neochief
- Got started with some unit tests and base test clase.
- Added support for image synchronization, #329825
- Added filefield/imagefield synchronization, by dasjo, #278426
- Fixed: Unset variables set to be multilingual don't show default values, by Island Usurper, #527534
- Reworked content type settings, now in own fieldset
- Added node language options:
  - Default to current language
  - No language neutral
  - Lock language once created

6.x-1.0 to 6.x-1.1
--------------------
- Fixed pgsql issue in i18nblocks query rewriting, by plj, #383772
- Changed i18ntaxonomy module weight for it to run before views, by Owen Barton, #386136